# gefest_templates

./: .pre-commit-config.yaml  README.md  cookiecutter.json
base_fastapi/: cookiecutter.json
base_fastapi/{{ cookiecutter.project_slug }}/: README.md  app.py  pyproject.toml  pytest.ini
base_fastapi/{{ cookiecutter.project_slug }}/dto_schemas/: ping_message.py
base_fastapi/{{ cookiecutter.project_slug }}/metrics/: __init__.py  gauges.py
base_fastapi/{{ cookiecutter.project_slug }}/routes/: __init__.py  root.py
base_fastapi/{{ cookiecutter.project_slug }}/settings/: __init__.py  base.py  paths.py  secrets.py
base_fastapi/{{ cookiecutter.project_slug }}/settings/logging_config/: __init__.py  context_formatter.py  setup.py
base_fastapi/{{ cookiecutter.project_slug }}/tests/: conftest.py
base_fastapi/{{ cookiecutter.project_slug }}/tests/integration/: test_ping_controller.py
base_fastapi/{{ cookiecutter.project_slug }}/type_stubs/: logging_levels.py
base_python/: cookiecutter.json
base_python/{{ cookiecutter.project_slug }}/: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  ruff.toml
