[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "prometheus-fastapi-instrumentator>=7.1.0",
    "fastapi>=0.116.1",
    "pydantic-settings>=2.10.1",
    "uvicorn>=0.35.0",
    "orjson>=3.11.0",
    "toml>=0.10.2",
    'httpx>=0.28.1']

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.12.4",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "pytest-env>=1.1.5",
    "factory_boy>=3.3.3", ]
